deploy/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: technical-on-boarding
  namespace: technical-on-boarding
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - technical-on-boarding.kubeme.io
  #   secretName: technical-on-boarding-tls
  rules:
  - host: technical-on-boarding.kubeme.io
    http:
      paths:
      - path: /
        backend:
          serviceName: technical-on-boarding
          servicePort: 80
